# ASALIPY

./: .gitignore  .travis.yml  EQUATIONS.md  EXAMPLES.md  MANIFEST.in  README.md  TODO.md  environment.yml  meta.yaml  pyproject.toml  run_tests.py  run_unit_test.py  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
asali/plotters/: basic.py  batch.py  batch_and_cstr.py  het1d.py  ph1d.py  reactor.py
asali/reactors/: EQUATIONS.md  basic.py  basic1d.py  batch.py  cstr.py  het1d.py  het1d_steady_state.py  het1d_transient.py  ph1d.py  ph1d_steady_state.py  ph1d_transient.py
asali/savers/: basic.py  batch_and_cstr.py  het1d.py  ph1d.py  reactor.py
asali/utils/: basic_supporter.py  cantera_file_converter.py  input_parser.py  numerical_solvers.py  reactor_plotter.py  solution_parser.py  ud.asali  unit_converter.py  user_defind_kinetic.py
conda-recipe/: conda_build_config.yaml  environment.yml  meta.yaml
examples/: README.md  batch.py  canterafiles.py  config.json  cstr.py  het1d.py  het1d_steady_state.py  het1d_transient.py  ph1d.py  ph1d_steady_state.py  ph1d_transient.py
examples/files/: H2-O2-Rh.xml  H2-O2.json
src/plotters/: reactor.py
src/reactors/: basic.py  batch.py  cstr.py  het1d.py  ph1d.py  ph1d_steady_state.py  ph1d_transient.py
src/utils/: cantera_file_converter.py  numerical_solvers.py  solid_material.py  solution_parser.py  unit_converter.py
tests/: H2-O2-Rh.xml  H2-O2-Rh.yaml  basic_unit_test.py  reactor_unit_test.py  reactors.json  utils.json
tests/BatchReactor/: example.asali  example.py  get_coverage.asali  get_mass_fraction.asali  get_mole_fraction.asali  get_results.asali  get_temperature.asali  solve.asali
tests/CanteraFileConverter/: from_chemkin_to_cti.cti  from_chemkin_to_yaml.yaml  from_cti_to_xml.xml  from_cti_to_yaml.yaml  from_xml_to_yaml.yaml  kinetic.kin  thermo.tdc
tests/CstrReactor/: example.asali  example.py  get_coverage.asali  get_mass_fraction.asali  get_mole_fraction.asali  get_results.asali  get_temperature.asali  solve.asali
tests/Heterogeneous1DReactor/: example.asali  example.py  get_coverage.asali  get_mass_fraction.asali  get_mole_fraction.asali  get_solid_mass_fraction.asali  get_solid_mole_fraction.asali  get_solid_temperature.asali  get_temperature.asali  initial_condition.asali  solve.asali
tests/PseudoHomogeneous1DReactor/: example.asali  example.py  get_coverage.asali  get_mass_fraction.asali  get_mole_fraction.asali  get_results.asali  get_temperature.asali  solve.asali
tests/SteadyStateHeterogeneous1DReactor/: example.asali  example.py  get_coverage.asali  get_results.asali  solve.asali
tests/SteadyStatePseudoHomogeneous1DReactor/: example.asali  example.py  get_coverage.asali  get_mass_fraction.asali  get_mole_fraction.asali  solve.asali
tests/TransientHeterogeneous1DReactor/: example.asali  example.py  (+8 more)
(+11 files in other folders)
