[metadata]
name = asali
version = file: version.txt
author = ASALI
author-email = ste.rebu@outlook.it
home-page = https://github.com/srebughini/ASALIPY
description = Library to model chemical reactors
long-description = file: README.md
long_description_content_type = text/markdown
license = GPL
license-file = LICENSE
platform = any
classifiers =
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Chemical Reactors :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/srebughini/ASALIPY/issues

[options]
include_package_data = true
package_dir=
    asali=src
packages =
    asali.utils
    asali.plotters
    asali.reactors
setup_requires =
    setuptools
